# Python_Course_Final_Project

./: README.md  pyproject.toml
tests/: test_add_word.py  test_store.py
vocab_builder/: __init__.py  __main__.py  main.py
vocab_builder/data/: history.json  vocab.json
vocab_builder/features/: __init__.py  add_word.py  quiz.py  review.py  view_words.py
vocab_builder/utils/: __init__.py  io_helpers.py  paths.py  store.py
