[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vocab_builder"
version = "0.1.0"
description = "A CLI vocabulary building application for Python beginners"
authors = [{name = "Python Course Student"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
